# PIAIC-Assignment

Assignment-1/: pyproject.toml
Assignment-1/src/assignment_1/: main.py  message_formatter.py
Assignment-2/: pyproject.toml
Assignment-2/src/hello_agent/: __init__.py  agent_hello.py  main.py
Assignment-3/: .env  pyproject.toml
Assignment-3/src/studybuddy/: studybuddy.py
Chatbot/: chatbot.py  my_secrets.py  pyproject.toml
