[project]
name = "assignment-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "adeelhashmat", email = "adeelhashmatkhan@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "openai-agents>=0.0.15",
]

[project.scripts]
assignment-1 = "assignment_1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
